syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductCategoryInfo {
	//ID 
    string id=2;
	//代号 
    string code=3;
	//描述 
    string description=4;
	//识别码 
    string identifier=5;
	//是否授权 
 	bool isAuthorized=6;
	//特性表达式 
    string attributeExpression=7;
	//备注 
    string remark=8;
	//产品品牌ID 
    string productBrandID=9;
    string productBrandName=10;
}

message QueryProductCategoryRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=5;
	//产品品牌ID 
    // @inject_tag: uri:"productBrandID" form:"productBrandID"
    string productBrandID=11;
}

message QueryProductCategoryResponse{
    Code code=1;
    string message=2;
    repeated ProductCategoryInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductCategoryResponse{
    Code code=1;
    string message=2;
    repeated ProductCategoryInfo data=3;
}

message GetProductCategoryDetailResponse{
    Code code=1;
    string message=2;
    ProductCategoryInfo data=3;
}